//https://grpc.io/docs/languages/go/basics/
syntax = "proto3";
option go_package = ".;pb";

// client to slave
service Kv {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (PutResponse);
  rpc Del(DelRequest) returns (DelResponse);
  rpc MoveData(MoveDataRequest) returns (MoveDataResponse);
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool ok = 1;
  string value = 2;
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool created = 1;
}

message DelRequest {
  string key = 1;
}

message DelResponse {
  bool deleted = 1;
}

message MoveDataRequest {
  int32 from_label = 1;
  int32 to_label = 2;
}

message MoveDataResponse {
  message Kv {
    string key = 1;
    string value = 2;
  }
  repeated Kv kvs = 1;
}